kustomizations/media/puppy-signal/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppysignal-backend
  labels:
    app: puppysignal-backend
    app.kubernetes.io/name: puppysignal-backend
    app.kubernetes.io/instance: puppysignal-stack
    app.kubernetes.io/part-of: puppysignal-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: puppysignal-backend
      app.kubernetes.io/name: puppysignal-backend
      app.kubernetes.io/instance: puppysignal-stack
      app.kubernetes.io/part-of: puppysignal-stack
  template:
    metadata:
      labels:
        app: puppysignal-backend
        app.kubernetes.io/name: puppysignal-backend
        app.kubernetes.io/instance: puppysignal-stack
        app.kubernetes.io/part-of: puppysignal-stack
    spec:
      containers:
      - name: puppysignal
        image: ghcr.io/citocafecito-homelab/puppysignal-backend:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: sa-volume
          mountPath: "/srv/ps_backend/firebase_admin_key.json" # Esta es la ruta del directorio
          subPath: "firebase_admin_key.json"
          readOnly: true
      volumes:
      - name: sa-volume
        secret:
          secretName: puppysignal-firebase
          items:
          - key: "sa-credentials.json"
            path: "firebase_admin_key.json"
        # - containerPort: 5656
        # - containerPort: 8001
        # resources:
        #   requests:
        #     cpu: "500m"
        #     memory: "512Mi"
        #   limits:
        #     cpu: "1"
        #     memory: "2Gi"
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 9191
        #   initialDelaySeconds: 30
        #   periodSeconds: 15
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 9191
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
