kustomizations/media/puppy-signal/cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppysignal-valkey
spec:
  selector:
    app: puppysignal-valkey
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
