kustomizations/media/puppy-signal/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppysignal-postgresql
  labels:
    app.kubernetes.io/name: puppysignal-postgresql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/name: puppysignal-postgresql
