kustomizations/media/puppy-signal/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppysignal-backend
  labels:
    app: puppysignal-backend
    app.kubernetes.io/name: puppysignal-backend
    app.kubernetes.io/instance: puppysignal-stack
    app.kubernetes.io/part-of: puppysignal-stack
spec:
  selector:
    app: puppysignal-backend
    app.kubernetes.io/name: puppysignal-backend
    app.kubernetes.io/instance: puppysignal-stack
  ports:
  - name: api
    port: 8000
    targetPort: 8000
