kustomizations/media/puppy-signal/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppysignal-webapp
  labels:
    app: puppysignal-webapp
    app.kubernetes.io/name: puppysignal-webapp
    app.kubernetes.io/instance: puppysignal-stack
    app.kubernetes.io/part-of: puppysignal-stack
spec:
  selector:
    app: puppysignal-webapp
    app.kubernetes.io/name: puppysignal-webapp
    app.kubernetes.io/instance: puppysignal-stack
  ports:
  - name: web
    port: 3000
    targetPort: 3000
