kustomizations/media/puppy-signal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puppysignal
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: puppysignal.citocafecito.work
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: puppysignal-backend
              port:
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: puppysignal-webapp
              port:
                number: 3000
